Fixes hero text overflow on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -780,7 +780,7 @@ body {
   color: white;
   position: relative;
   padding: 0 1em;
-  top: 30%;
+  top: 25%;
   z-index: 1; }
   .hero-home .hero-text:after {
     content: "";
@@ -788,11 +788,12 @@ body {
     clear: both; }
   @media screen and (min-width: 40em) {
     .hero-home .hero-text {
-      top: 50%; } }
+      top: 40%; } }
 
 .hero-home .hero-text h1 {
   color: white;
   font-weight: normal;
+  font-size: 1.25em;
   line-height: 1.5em;
   text-transform: initial;
   margin-bottom: 1em; }
